# INSO-GH-API-QUERY

./: .gitignore  AGENTS.md  LICENSE.md  README.md  config.json  dev-metrics.yml  exampleActionsConfig.json  exampleConfig.json  exampleLocalRunConfig.json  exportMetricsForCourseMilestone.py  exportMetricsForLectureTopicTasks.py  generateLectureTopicTaskMetrics.py  generateMilestoneMetricsForActions.py  generateTeamMetrics.py  getTeamMembers.py  getTeams.py  pyproject.toml  scoring.md  test_generateTeamMetrics.py
.github/workflows/: AGENTS.md  ci.yml
data/: courseConfig.json
src/: AGENTS.md  exportMetricsForCourseMilestone.py  exportMetricsForDiscussionParticipation.py  exportMetricsForLectureTopicTasks.py  generateLectureTopicTaskMetrics.py  generateMilestoneMetricsForActions.py  generateTeamMetrics.py  getMilestones.py  getProject.py  getTeamMembers.py  getTeams.py
src/io/: AGENTS.md  charts.py  json_dump.py  markdown.py
src/legacy/: AGENTS.md  generateMilestoneMetricsForActions.py
src/utils/: AGENTS.md  autoExtractMilestone.py  constants.py  discussions.py  issues.py  milestones.py  models.py  parseDateTime.py  project.py  queryRunner.py
test/: AGENTS.md  test_generateTeamMetrics.py
test/io/discussion_participation/: main.py  result.md
test/utils/: test_autoExtractMilestone.py  test_discussions.py  test_issues.py
utils/: constants.py  models.py  queryRunner.py
