[tool.poetry]
name = "insoghapiquery"
version = "0.1.0"
description = "Codebase used to calculate grades for UPRM students' Software Engineering projects"
authors = ["Poggecci <alejandro.cruzado@upr.edu>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "src/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.2"
pytz = "^2024.1"




[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
