[tool.poetry]
name = "insoghapiquery"
version = "0.1.0"
description = "Codebase used to calculate grades for UPRM students' Software Engineering projects"
authors = ["Poggecci <alejandro.cruzado@upr.edu>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "src/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.2"
types-requests = "^2.32"
pytz = "^2024.1"
types-pytz = "^2024.2"



[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
debugpy = "^1.8.5"
mypy = "^1.11.2"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true
exclude = ["tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
